// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listed tool surfaces > profile "chatgpt" lists byte-identical tool descriptors 1`] = `
{
  "approve_agent_work": "2718b8476741870b",
  "approve_decision": "2a9ae7a11e969b29",
  "check_execution_readiness": "8654b94408726684",
  "get_agent_status": "eba1f783b17f3c16",
  "get_initiative_pulse": "42dec172c29ecbe0",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_operator_chronicle": "e25d14c368497d85",
  "handoff_task": "d4d652946ed1a6f8",
  "manage_lifecycle": "fc7b514fcf475c51",
  "orgx_act": "f2e37137b5e38df3",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "39977ec75c56a8bf",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_decide": "304cf7a9c6e0c348",
  "orgx_inspect": "d95c7c71a1c9801b",
  "orgx_panel_snapshot": "4218ba95279ae843",
  "orgx_plan": "557e952a03fc09a6",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "386f213902732845",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "29c0860fb8349feb",
  "orgx_write": "83d98b5670c2e8b9",
  "reject_decision": "c5bedfd37dd63ed2",
  "resume_agent_run": "5c016323dee7914e",
  "review_artifact": "326e48293c3f656d",
  "scaffold_initiative": "93f1b3c5eda771cc",
}
`;

exports[`listed tool surfaces > profile "claude-directory" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "71a53b732c85a37f",
  "get_agent_status": "69cf42f1bdd2c38f",
  "get_initiative_pulse": "b98fa2eeb4b82e01",
  "get_morning_brief": "f216afcf9c323e3f",
  "get_operator_chronicle": "5f94aff4a0460e64",
  "manage_lifecycle": "33875ee01fd0d1c8",
  "orgx_attach": "9a7a339c628a6fea",
  "orgx_bootstrap": "03d66e1d81ed9106",
  "orgx_change_entity_state": "bc721c58237c212f",
  "orgx_check_delegation": "14f312a9fdc40cf4",
  "orgx_command_status": "522c3ff992d06b93",
  "orgx_complete_plan": "e7c5ebf07c2cbc2b",
  "orgx_complete_with_proof": "a90c6483779720fa",
  "orgx_create_entity": "2c1055a58d3fa8ea",
  "orgx_delegate_work": "0d5a8b3782faf082",
  "orgx_improve_plan": "27f6794c76d7ef15",
  "orgx_inspect": "385dc0d961390f5e",
  "orgx_list_pending_decisions": "225bb1f7975c20ed",
  "orgx_open_decision_review": "0f697667832bead8",
  "orgx_read_plan": "e6250b7d2ceae871",
  "orgx_recommend": "7d4b00772504a14d",
  "orgx_record_decision": "f2d63d447b44aa7a",
  "orgx_record_plan_edit": "b582d0bf713c7fbd",
  "orgx_search": "446b76994ccaa211",
  "orgx_start_plan": "773d88d8e7e0c555",
  "orgx_submit_receipt": "bc17515c95278b52",
  "orgx_update_entity": "ad26ef92f9c0e32b",
  "resume_agent_run": "90b388a6df57d58e",
  "review_artifact": "fffa3af8e120f00c",
}
`;

exports[`listed tool surfaces > profile "claude-plugin" lists byte-identical tool descriptors 1`] = `
{
  "get_agent_status": "eba1f783b17f3c16",
  "get_initiative_pulse": "42dec172c29ecbe0",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_operator_chronicle": "e25d14c368497d85",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "39977ec75c56a8bf",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_controller_status": "3a73c7ce857fa5cc",
  "orgx_decide": "304cf7a9c6e0c348",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_expect": "215505c6582ecf93",
  "orgx_inspect": "d95c7c71a1c9801b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_submit_receipt": "386f213902732845",
  "orgx_tail": "d27b33e1225e6ac8",
}
`;

exports[`listed tool surfaces > profile "commander" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "8654b94408726684",
  "consolidate_pr": "6abba9a7b56106c6",
  "get_operator_chronicle": "e25d14c368497d85",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "f2e37137b5e38df3",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "39977ec75c56a8bf",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_complete_work": "a639f0c79f22d1cc",
  "orgx_create_work": "a311a644b2e0bcb0",
  "orgx_decide": "304cf7a9c6e0c348",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_expect": "215505c6582ecf93",
  "orgx_inspect": "d95c7c71a1c9801b",
  "orgx_plan": "557e952a03fc09a6",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "386f213902732845",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_write": "83d98b5670c2e8b9",
  "scaffold_initiative": "93f1b3c5eda771cc",
}
`;

exports[`listed tool surfaces > profile "executor" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "8654b94408726684",
  "consolidate_pr": "6abba9a7b56106c6",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "f2e37137b5e38df3",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "39977ec75c56a8bf",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_complete_work": "a639f0c79f22d1cc",
  "orgx_create_work": "a311a644b2e0bcb0",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_expect": "215505c6582ecf93",
  "orgx_inspect": "d95c7c71a1c9801b",
  "orgx_plan": "557e952a03fc09a6",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "386f213902732845",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_write": "83d98b5670c2e8b9",
}
`;

exports[`listed tool surfaces > profile "full" lists byte-identical tool descriptors 1`] = `
{
  "approve_agent_work": "2718b8476741870b",
  "approve_decision": "2a9ae7a11e969b29",
  "check_execution_readiness": "8654b94408726684",
  "check_spawn_guard": "e5224687a58937f5",
  "classify_task_model": "ca122096a65b7b90",
  "complete_plan": "669bfa016250d582",
  "configure_org": "5e067157f6de4a23",
  "configure_outcome_type": "cb02470d0e404c76",
  "consolidate_pr": "6abba9a7b56106c6",
  "create_decision": "8fb6a22d7ec5e370",
  "create_milestone": "c302e98c9c12e849",
  "create_task": "94df618311eaf4ce",
  "delegate_agent_task": "ae624f12057af3f8",
  "get_active_sessions": "37d81ba0695ed5eb",
  "get_agent_status": "eba1f783b17f3c16",
  "get_decision_history": "0f148975624fc365",
  "get_initiative_pulse": "42dec172c29ecbe0",
  "get_initiative_stream_state": "622513234e9f4010",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_my_trust_context": "4a9071597260d592",
  "get_operator_chronicle": "e25d14c368497d85",
  "get_outcome_attribution": "a82005d4d9d1d163",
  "get_pending_decisions": "b60b5c890b6407dc",
  "get_relevant_learnings": "0baed2d7ea3869de",
  "get_scoring_signals": "a1e70a55763364c1",
  "handoff_task": "d4d652946ed1a6f8",
  "improve_plan": "a3e512f1d600e83c",
  "manage_lifecycle": "fc7b514fcf475c51",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "f2e37137b5e38df3",
  "orgx_apply_changeset": "efa7b2ed216c06f0",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "39977ec75c56a8bf",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_complete_work": "a639f0c79f22d1cc",
  "orgx_controller_status": "3a73c7ce857fa5cc",
  "orgx_create_work": "a311a644b2e0bcb0",
  "orgx_decide": "304cf7a9c6e0c348",
  "orgx_describe_action": "a6dde8e9c3c2fe72",
  "orgx_describe_tool": "d7334c7342534ed7",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_expect": "215505c6582ecf93",
  "orgx_free_audit": "2564eefddf9d0826",
  "orgx_inspect": "d95c7c71a1c9801b",
  "orgx_panel_snapshot": "4218ba95279ae843",
  "orgx_plan": "557e952a03fc09a6",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "386f213902732845",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "29c0860fb8349feb",
  "orgx_write": "83d98b5670c2e8b9",
  "pin_workstream": "264a1edf7eda05aa",
  "query_org_memory": "b992a8515583399b",
  "queue_action": "3d27e6294a02761d",
  "recall_memory": "6092409b0d5bc26b",
  "recommend_next_action": "3916a8a4d2c7525d",
  "record_outcome": "ee4624f4f5b7513b",
  "record_plan_edit": "707737413b3c4ba5",
  "record_quality_score": "e99358b33099cc14",
  "reject_decision": "c5bedfd37dd63ed2",
  "remember_decision": "ab09b087806033a2",
  "request_independent_artifact_review": "57cf65c7729ecfd4",
  "resume_agent_run": "5c016323dee7914e",
  "resume_plan_session": "b836de74a1f20d0a",
  "review_artifact": "326e48293c3f656d",
  "scaffold_initiative": "93f1b3c5eda771cc",
  "score_next_up_queue": "48c368c412cb805e",
  "scoring_config": "978827eec8a0dbc8",
  "spawn_agent_task": "7564e8148f1ad541",
  "start_autonomous_session": "a5705112639e35b5",
  "start_plan_session": "4e41aad2cbd94bc3",
  "stats": "fce830c9981265c4",
  "submit_learning": "bc02887779c7f0a6",
  "sync_client_state": "62c42527e1fee26f",
  "track_project_progress": "4580c88252fd709e",
  "update_stream_progress": "1d975e8c143e6581",
  "validate_studio_content": "d13ac4168277e7bc",
  "workspace": "ee60cd85919387e7",
}
`;

exports[`listed tool surfaces > profile "memory" lists byte-identical tool descriptors 1`] = `
{
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "39977ec75c56a8bf",
  "orgx_decide": "304cf7a9c6e0c348",
  "orgx_expect": "215505c6582ecf93",
  "orgx_inspect": "d95c7c71a1c9801b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_submit_receipt": "386f213902732845",
}
`;

exports[`listed tool surfaces > profile "observer" lists byte-identical tool descriptors 1`] = `
{
  "get_operator_chronicle": "e25d14c368497d85",
  "orgx_bootstrap": "39977ec75c56a8bf",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_decide": "304cf7a9c6e0c348",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_inspect": "d95c7c71a1c9801b",
  "orgx_plan": "557e952a03fc09a6",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_tail": "d27b33e1225e6ac8",
}
`;

exports[`listed tool surfaces > profile "planner" lists byte-identical tool descriptors 1`] = `
{
  "orgx_act": "f2e37137b5e38df3",
  "orgx_bootstrap": "39977ec75c56a8bf",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_decide": "304cf7a9c6e0c348",
  "orgx_expect": "215505c6582ecf93",
  "orgx_inspect": "d95c7c71a1c9801b",
  "orgx_plan": "557e952a03fc09a6",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_write": "83d98b5670c2e8b9",
  "scaffold_initiative": "93f1b3c5eda771cc",
}
`;

exports[`listed tool surfaces > profile "read-only" lists byte-identical tool descriptors 1`] = `
{
  "get_agent_status": "eba1f783b17f3c16",
  "get_initiative_pulse": "42dec172c29ecbe0",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_operator_chronicle": "e25d14c368497d85",
  "orgx_inspect": "d95c7c71a1c9801b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_search": "f99fd7c7687f97c8",
}
`;

exports[`listed tool surfaces > profile "v2" lists byte-identical tool descriptors 1`] = `
{
  "approve_agent_work": "2718b8476741870b",
  "approve_decision": "2a9ae7a11e969b29",
  "check_execution_readiness": "8654b94408726684",
  "consolidate_pr": "6abba9a7b56106c6",
  "delegate_agent_task": "ae624f12057af3f8",
  "get_agent_status": "eba1f783b17f3c16",
  "get_initiative_pulse": "42dec172c29ecbe0",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_operator_chronicle": "e25d14c368497d85",
  "handoff_task": "d4d652946ed1a6f8",
  "manage_lifecycle": "fc7b514fcf475c51",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "f2e37137b5e38df3",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "39977ec75c56a8bf",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_controller_status": "3a73c7ce857fa5cc",
  "orgx_decide": "304cf7a9c6e0c348",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_expect": "215505c6582ecf93",
  "orgx_inspect": "d95c7c71a1c9801b",
  "orgx_panel_snapshot": "4218ba95279ae843",
  "orgx_plan": "557e952a03fc09a6",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "386f213902732845",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "29c0860fb8349feb",
  "orgx_write": "83d98b5670c2e8b9",
  "query_org_memory": "b992a8515583399b",
  "recall_memory": "6092409b0d5bc26b",
  "recommend_next_action": "3916a8a4d2c7525d",
  "reject_decision": "c5bedfd37dd63ed2",
  "request_independent_artifact_review": "57cf65c7729ecfd4",
  "resume_agent_run": "5c016323dee7914e",
  "review_artifact": "326e48293c3f656d",
  "scaffold_initiative": "93f1b3c5eda771cc",
  "spawn_agent_task": "7564e8148f1ad541",
  "track_project_progress": "4580c88252fd709e",
}
`;
